<resources>
    <string name="app_name">BeerKing</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_carrinho">Carrinho</string>
    <string name="menu_pedidos">Pedidos</string>
    <string name="menu_conta">Conta</string>
    <string name="menu_mensagens">Mensagens</string>
    <string name="menu_configuracoes">Configurações</string>
    <string name="menu_cervejas">Busca de Cervejas</string>
    <string name="cerveja_imagem">cerveja_imagem</string>
    <string name="title_activity_carrinho">CarrinhoActivity</string>
</resources>
