<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cervejas"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/menu_cervejas"/>
        <item
            android:id="@+id/nav_carrinho"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/menu_carrinho" />
        <item
            android:id="@+id/nav_pedidos"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"
            android:title="@string/menu_pedidos" />
        <item
            android:id="@+id/nav_conta"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_conta" />
        <item
            android:id="@+id/nav_mensagens"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/menu_mensagens" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_configuracoes"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/menu_configuracoes" />
        </menu>
    </item>

</menu>
